answered questions in js file, made updates to HTML file, part of group work with Sasha

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <ul id="hobby-list">
             <!-- append items to the ul -->
         </ul>
+        <h3>Colors</h3>
+        <ul id="color-list"></ul>
+        <h3>Even and Odd</h3>
+        <p id="even-and-odd"></p>
     </div>
     <script src="client.js"></script>
 </body>
